Change mumble link

--- a/_layouts/heavencraft.html
+++ b/_layouts/heavencraft.html
@@ -60,7 +60,7 @@
 					<div class="minecraftia h3">Rejoins-nous!</div>
 					<div class="app-address">
 					 	<img src="images/minecraft.png" alt="" />&nbsp;heavencraft.fr<br />
-						<a href="mumble://heavencraft.fr/"><img src="images/mumble.png" alt="mumble" /></a>&nbsp;heavencraft.fr
+						<a href="mumble://mumble.heavencraft.fr/"><img src="images/mumble.png" alt="mumble" /></a>&nbsp;mumble.heavencraft.fr
 					</div>
 				</div>
 				<h1 class="col-xs-6 lead">Heavencraft est un serveur minecraft français se reposant sur sa communauté soudée, ses maps diversifiées et ses constructions époustouflantes, proposant au joueur une Aventure avec un grand A.</h1>
