Change Minecraft link

--- a/_layouts/heavencraft.html
+++ b/_layouts/heavencraft.html
@@ -59,7 +59,7 @@
 				<div class="col-xs-5 lead text-center">
 					<div class="minecraftia h3">Rejoins-nous!</div>
 					<div class="app-address">
-					 	<img src="images/minecraft.png" alt="" />&nbsp;heavencraft.fr<br />
+					 	<img src="images/minecraft.png" alt="Minecraft" />&nbsp;play.heavencraft.fr<br />
 						<a href="mumble://mumble.heavencraft.fr/"><img src="images/mumble.png" alt="mumble" /></a>&nbsp;mumble.heavencraft.fr
 					</div>
 				</div>
